Fix songs hidden behind player

--- a/src/style/app/routes/route-folder.scss
+++ b/src/style/app/routes/route-folder.scss
@@ -114,6 +114,7 @@
     .table-wrapper {
       padding-top: 40px;
       padding-left: 20px;
+      padding-bottom: 84px;
 
       table {
         width: 100%;
